--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@porla-contrib/pushover",
   "version": "0.1.0",
-  "description": "",
+  "description": "A Pushover plugin for Porla.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +10,12 @@
     "type": "git",
     "url": "git+https://github.com/porla-contrib/pushover.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "porla",
+    "porla-plugin",
+    "pushover"
+  ],
+  "author": "Viktor Elofsson <viktor@viktorelofsson.se>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/porla-contrib/pushover/issues"
@@ -20,5 +24,8 @@
   "dependencies": {
     "mustache": "^2.3.2",
     "request": "^2.88.0"
+  },
+  "peerDependencies": {
+    "@porla/porla": "^0.3.0"
   }
 }
